# BoringToUninstall

./: .gitignore  CMakeLists.txt  ENVIRONMENT_SETUP.md  README.md  build.bat  run.bat  setup_environment.bat
resources/: btu_resources.qrc
src/: AppScanner.cpp  AppScanner.h  BTUMainWindow.cpp  BTUMainWindow.h  Logger.cpp  Logger.h  SafetyChecker.cpp  SafetyChecker.h  UninstallEngine.cpp  UninstallEngine.h  Version.h  main.cpp
ui/: btu_mainwindow.ui
